--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@uzernamex/lotide",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A collection of functionalities",
-  "main": "assertArraysEqual.js",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
